se agrega la vista de registro de inspeccion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Mecanico</string>
+    <string name="brand_prompt">Marca</string>
+    <string name="color_prompt">Color</string>
+
+
+
+
 </resources>
